--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
 </head>
 <body>
     <div class="menu1">
-        <div class="str1"></div>
-        <div class="str2"></div>
-        <div class="str3"></div>
+        <div class="str1"><h2><a href="str1.html">strona1</a></h2></div>
+        <div class="str2"><h2><a href="str2.html">strona2</a></h2></div>
+        <div class="str3"><h2><a href="str3.html">strona3</a></h2></div>
     </div>
-    <div class="menu2"></div>
+    <div class="menu2">
+        <ul>
+            <li>interia.pl</li>
+            <li>onet.pl</li>
+            <li>facebook.pl</li>
+            <li>youtube.pl</li>
+        </ul>
+    </div>
+    <div>
+        
+    </div>
 </body>
 </html>
